<resources>
    <string name="app_name">ShecareBleSDKUI</string>
    <string name="warm_prompt">Tips</string>
    <string name="i_know">I know</string>
    <string name="sure">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="finish">Ok</string>
    <string name="save">Save</string>

    <string name="personal_my_device_bind">Bind</string>
    <string name="device_list">Device List</string>
    <string name="shecare_thermometer">Shecare smart basal thermometer</string>
    <string name="shecare_ewq">Shecare Smart forehead thermometer</string>
    <string name="shecare_txy">Shecare Smart Fetal Favorite</string>

    <string name="request_location_premisson">Scanning Bluetooth device needs to open the location function permission.</string>
    <string name="location_service_turn_on">The location service is enabled</string>
    <string name="location_service_turn_off">The location service is not enabled</string>
    <string name="request_location_premisson_tips">Please turn on the Bluetooth of your phone, otherwise you cannot connect the thermometer.</string>
    <string name="binding">binding...</string>
    <string name="hardware_attached_unattach">This device has been paired already. Please release it first.</string>
    <string name="device_choose_toast">Permission to get your position is needed for your device to connect to your phone. Please allow for it in the phone settings.</string>
    <string name="hardware_attached">This device has been paired already. Please release it first.</string>
    <string name="attach_success">Connected successfully</string>
    <string name="server_attach_error">Server connection error. Please try later.</string>
    <string name="attach_fail">Bind fail!</string>
    <string name="sel_wrong_gen3">please choose the right device type to bind!</string>
    <string name="open_location_hint">open Location Service</string>
    <string name="locaiton_server_hint">you can search and connect thermometer equipment.</string>
    <string name="open_location_server_success">location service open</string>
    <string name="open_locaiton_service_fail">location service open fail</string>
    <string name="turn_on_ble">Bluetooth is on</string>
    <string name="turn_off_ble">Bluetooth is off</string>
    <string name="thermometer_conn_success">Connected</string>
    <string name="thermometer_conn_fail">Not Connected</string>
    <string name="no_new_temp">No Temperature</string>
    <string name="authorize">Authorization</string>
    <string name="ok">Ok</string>
    <string name="allright">Ok</string>
    <string name="understand">Ok</string>


    <string name="device_upate_tips">Your device program is not up to date, please click "OK" to update the device program!</string>
    <string name="firmware_update_title">The device is being upgraded</string>
    <string name="firmware_update_content">In order to ensure a good Bluetooth connection, please always keep the pregnant orange displayed on the screen, please do not turn off the device</string>
    <string name="oad">Update</string>
    <string name="oad_scan_str">Please open device, scanning...</string>
    <string name="oad_device_found">Device found, connecting...</string>
    <string name="oad_check_ver">Device connected, checking the latest firmware version...</string>
    <string name="oad_disconnected">Device disconnected!</string>
    <string name="get_firmver_fail">Check firmware version failed, please check your network!</string>
    <string name="oad_unSupported">Found your firmware version is :%s, which OAD is not supported!</string>
    <string name="need_oad">Found newer firmware version: %s, download to update!</string>
    <string name="already_latest_ver">The current firmware is already the latest version!</string>
    <string name="oad_start">Start OAD</string>
    <string name="oading">Firmware is upgrading...</string>
    <string name="oading_time">Time in total: %d sec, left %1$d sec</string>
    <string name="oad_check_success">Checking if OAD is successful, please wait...</string>
    <string name="oad_check_succ_g23">Checking if OAD is successful, please restart device...</string>
    <string name="oad_suceess">Firmware is successfully </string>
    <string name="oad_fail">Firmware upgrade failed!</string>
    <string name="macAddress">MAC Address:</string>
    <string name="deviceVersion">Version:</string>

    <string name="open_phone_bluetooth">Bluetooth is turned on</string>
    <string name="open_thermometer_switch">Shecare Thermometer is turned on</string>
    <string name="continue_manual_add_thermomter">Continue to add your body temperature</string>
    <string name="connect_device">Connecting</string>
    <string name="connect_device_success">Connected</string>
    <string name="unconnect_device">Not Connected</string>
    <string name="connect_hint_1">Slow connection?</string>
    <string name="connect_hint_2">1)Restart the smart basal thermometer\n</string>
    <string name="connect_hint_3">2)Make sure the smart basal \nthermometer is not on History Mode</string>
    <string name="connect_hint_4">3)Low battery? \nTry to change the battery.</string>
    <string name="device_connect">Connection</string>
    <string name="repeat_search">Reconnect</string>

    <string name="data_uploading">Uploading</string>
    <string name="upload_complete">Done</string>
    <string name="temperature_alert_1">Data check completed. No new BBT data. Measure your temperature now.</string>
    <string name="temperature_alert_2">The beep indicates your temperature is taken successfully. Do not turn off the tracker immediately after the measurement in case of data loss.\n</string>
    <string name="temperature_alert_3">BBT data transferred. %d data synchronized. Let’s keep measuring your BBT every day.</string>
    <string name="temperature_alert_4">BBT data transferred. %d data updated. Let’s keep measuring.</string>
    <string name="temperature_alert_sub_4"><![CDATA[<font color="#FF6F8F">Notice:</font>It\'s best to measure BBT before your get out of bed every morning. Please try to measure it at the same time every day.]]></string>
    <string name="temperature_alert_5">BBT data transferred. %d data updated. No BBT data for today. The best time to measure BBT is after you wake up and before you get out of bed in the morning. Don’t forget to measure your BBT today.</string>
    <string name="temperature_alert_6">BBT data transferred. %d data updated. No BBT data for today. The best time to measure BBT is after you wake up and before you get out of bed in the morning. Let’s measure the temperature now.</string>
    <string name="temperature_alert_7">BBT data transferred. %d data updated. No BBT data for today. Let’s measure the temperature now.</string>
    <string name="temperature_alert_sub_7"><![CDATA[<font color="#FF6F8F">Notice:</font>It\'s best to measure BBT before your get out of bed every morning. Please try to measure it at the same time every day.]]></string>
    <string name="temperature_alert_8">%d BBT data received. Don’t forget to check the BBT curve.</string>
    <string name="add_valid_temperature_hint">Shecare fails to save your temperature %s%s. Body temperature should be %s-%s%s.</string>
    <string name="update_oad_hint_1">To ensure the Bluetooth connection, always keep Shecare on the screen and do not turn off the device.</string>

    <string name="wait_thermometer_data_uploading">Data uploading, please wait</string>
    <string name="format_font_ff7568"><![CDATA[<font color="#FF7486">%s</font>]]></string>
    <string name="bbt_valid_value_post_fail">Temperature reading too high. Please take your temperature again.</string>

    <string name="ble_temp_bg_notif_title">shecare notification</string>
    <string name="ble_temp_bg_notif_ticker">You received a new temperature!</string>
    <string name="ble_temp_bg_notif_def_content">You received multiple new temperatures! see detail in App</string>
    <string name="ble_temp_bg_notif_content">Receive a temperature: %s.</string>
    <string name="ble_temp_bg_notif_content_last">, temperature and test paper is more accurate！</string>


    <string name="add_more_temperature_data">Add in bulk</string>
    <string name="auto_upload_temperature">Upload Automatically</string>
    <string name="today_temperature_title">Body temperature today</string>
    <string name="add_temperature_select_time">Choose time:</string>
    <string name="add_temperature_bbt">BBT:</string>
    <string name="you_has_not_thermometer">Don’t have a Shecare smart basal thermometer yet?</string>
    <string name="buy_thermometer_introduce1">Shecare smart basal thermometer collects women\'s basal body temperature (BBT). Your BBT data will be represented automatically in graphs and stored permanently.</string>
    <string name="buy_thermometer_introduce2">Buy now and get a free conception prep course.</string>
    <string name="go_to_bind">Have,log in</string>
    <string name="go_to_buy">Buy now</string>
    <string name="not_edit_future_time">Cannot be edited to a future time</string>
    <string name="not_edit_past_time">Cannot be edited to a past time</string>
    <string name="add_temp">Add body temperature</string>
    <string name="device_info">Device info</string>
    <string name="temp_auto_upload_success">Temperature upload successfully</string>
    <string name="temp_add_success">Temperature saved successfully</string>
    <string name="temp_auto_upload">Auto</string>
    <string name="temp_add">Manual input</string>
    <string name="unbind_device">Unbind device</string>
    <string name="device_upgrade">Equipment program upgrade</string>
    <string name="device_manage">Management</string>
    <string name="turn_on_ble_hint">Please turn on the phone bluetooth</string>
    <string name="turn_on_thermometer">Press the power button</string>
    <string name="check_device_version">Device program version verification</string>
    <string name="unbind_success">Unbind successfully</string>
    <string name="bind_success">Bind successfully</string>
</resources>
