<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <com.ikangtai.bluetoothui.view.TopBar
        android:id="@+id/topBar"
        style="@style/toolBarStyle"
        custom:midText="@string/device_connect"
        custom:rightBtnBg="@color/trans"
        custom:rightBtnHeight="-1dp"
        custom:rightBtnText="@string/device_manage"
        custom:rightBtnTextColor="@color/color_67A3FF"
        custom:rightBtnTextSize="14sp"
        custom:rightBtnVisible="true"
        custom:rightBtnWidth="-1dp" />


    <com.ikangtai.bluetoothui.view.ThermometerHelper
        android:id="@+id/thermomterHelper"
        android:layout_width="match_parent"
        android:layout_height="260dp">


        <ProgressBar
            android:id="@+id/thermomterProgressBar"
            android:layout_width="230dp"
            android:layout_height="230dp"
            android:layout_gravity="center"
            android:indeterminateDrawable="@drawable/ble_loading" />


        <LinearLayout
            android:layout_width="230dp"
            android:layout_height="230dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/thermomterHintTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_444444"
                android:textSize="@dimen/title_text_size"
                android:visibility="gone" />

            <TextSwitcher
                android:id="@+id/thermomterHint"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp_30"
                android:layout_marginTop="@dimen/dp_10"
                android:inAnimation="@anim/text_translate_in"
                android:outAnimation="@anim/text_translate_out"
                android:visibility="gone" />
        </LinearLayout>


        <ImageView
            android:id="@+id/thermomterIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:visibility="gone" />


        <TextView
            android:id="@+id/thermomterState"
            android:layout_width="230dp"
            android:layout_height="230dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/color_444444"
            android:textSize="@dimen/title_text_size"
            android:visibility="gone" />


        <TextView
            android:id="@+id/thermomterUploading"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingLeft="@dimen/dp_10"
            android:paddingTop="@dimen/dp_5"
            android:paddingRight="@dimen/dp_10"
            android:paddingBottom="@dimen/dp_5"
            android:textColor="@color/color_444444"
            android:visibility="gone" />

    </com.ikangtai.bluetoothui.view.ThermometerHelper>


    <TextView
        android:id="@+id/openBluetoothHint"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:drawableLeft="@drawable/binding_icon_normal"
        android:drawablePadding="@dimen/dp_10"
        android:gravity="left|center_vertical"
        android:padding="@dimen/dp_5"
        android:text="@string/open_phone_bluetooth" />

    <TextView
        android:id="@+id/openThermometerhHint"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:drawableLeft="@drawable/binding_icon_normal"
        android:drawablePadding="@dimen/dp_10"
        android:gravity="left|center_vertical"
        android:padding="@dimen/dp_5"
        android:text="@string/open_thermometer_switch" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"></LinearLayout>


    <TextView
        android:id="@+id/manualThermomter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="@dimen/dp_5"
        android:text="@string/continue_manual_add_thermomter"
        android:textColor="@color/color_b2b2b2"
        android:visibility="gone" />

    <Button
        android:id="@+id/operatorBtn"
        style="@style/commonButtonCornerStyle"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/dp_20"
        android:gravity="center"
        android:text="@string/cancel"
        android:textSize="18sp" />

</LinearLayout>
