<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.ikangtai.bluetoothui.view.TopBar
        android:id="@+id/topBar"
        style="@style/toolBarStyle"
        custom:midText="@string/device_info" />

    <RelativeLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/topBar"
        android:layout_marginTop="@dimen/dp_5"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/dp_20"
        android:paddingTop="@dimen/dp_10">

        <ImageView
            android:id="@+id/deviceLogo"
            android:layout_width="54dp"
            android:layout_height="match_parent"
            android:layout_alignTop="@+id/deviceInfo"
            android:layout_alignBottom="@+id/deviceInfo"
            android:scaleType="centerInside"
            android:src="@drawable/a31" />

        <LinearLayout
            android:id="@+id/deviceInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_5"
            android:layout_toRightOf="@+id/deviceLogo"
            android:orientation="vertical">

            <TextView
                android:id="@+id/deviceName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" "
                android:textColor="@color/app_primary_light_color"
                android:textSize="@dimen/title_text_size" />

            <TextView
                android:id="@+id/deviceMacAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text=" "
                android:textSize="@dimen/button_text_small_size_12" />

            <TextView
                android:id="@+id/deviceOadVesion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:text=" "
                android:textSize="@dimen/button_text_small_size_12" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_below="@+id/deviceLogo"
            android:layout_marginTop="@dimen/dp_5"
            android:background="#f0f0f0" />

    </RelativeLayout>

    <Button
        android:id="@+id/unbind_device"
        style="@style/commonButtonCornerStyle"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/dp_40"
        android:text="@string/unbind_device"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/device_upgrade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/unbind_device"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/dp_10"
        android:gravity="center"
        android:padding="@dimen/dp_5"
        android:text="@string/device_upgrade"
        android:textColor="@color/color_b2b2b2" />
</RelativeLayout>

